Fixed overlay overflowing screen when too tall

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
   top: 0;
   left: 0;
   background-color: #000;
-  opacity: 0.8;
+  opacity: 0.6;
   z-index: 99;
 }
 
